[package]
name = "ringsfield"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking", "bevy_ui"] }
noise = "0.9.0"
structopt = "0.3.26"

# The following are some recomended optimizations from the bevy wiki
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
